--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_definitions(-DSUDOU_PLATFORM_WINDOWS)
-add_executable(Sandbox src/SandboxAPP.cpp)
+add_executable(Sandbox src/SandboxApp.cpp)
 target_link_libraries(Sandbox Sudou)
