feat(Linux): 添加跨平台编译

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,13 @@ project (Sudou)
 include_directories("${PROJECT_SOURCE_DIR}/Sudou/src")
 include_directories("${PROJECT_SOURCE_DIR}/Sudou/src/Sudou")
 
+if (WIN32)
+    message(STATUS "Is windows")
+elseif (UNIX AND NOT APPLE)
+    message(STATUS "Is Unix")
+elseif (APPLE)
+    message(STATUS "Is Apple")
+endif (WIN32)
 
 set(EXECUTABLE_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/bin)
