--- a/Sudou/src/Sudou/CMakeLists.txt
+++ b/Sudou/src/Sudou/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_definitions(-DSUDOU_PLATFORM_WINDOWS -DSUDOU_BUILD_DLL)
+if (WIN32)
+    add_definitions(-DSUDOU_PLATFORM_WINDOWS -DSUDOU_BUILD_DLL)
+endif(WIN32)
 add_library(Sudou SHARED
 Application.cpp
 )
