feat(tree): 更新目录结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,7 @@ cmake_minimum_required (VERSION 3.1)
 set (CMAKE_C_STANDARD 11)
 set (CMAKE_CXX_STANDARD 11)
 project (Sudou)
-# include .h
-include_directories("${PROJECT_SOURCE_DIR}/Sudou/src")
-include_directories("${PROJECT_SOURCE_DIR}/Sudou/src/Sudou")
+include_directories("${PROJECT_SOURCE_DIR}/Engine/Source")
 
 if (WIN32)
     message(STATUS "Is windows")
@@ -14,8 +12,7 @@ elseif (APPLE)
     message(STATUS "Is Apple")
 endif (WIN32)
 
-set(EXECUTABLE_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/bin)
-set(LIBRARY_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/bin)
+set(EXECUTABLE_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/Engine/Binaries/${CMAKE_VS_PLATFORM_NAME})
+set(LIBRARY_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/Engine/Binaries/${CMAKE_VS_PLATFORM_NAME})
 
-add_subdirectory(Sandbox)
-add_subdirectory(Sudou)
+add_subdirectory(Engine/Source)
