--- a/Engine/Source/Runtime/CMakeLists.txt
+++ b/Engine/Source/Runtime/CMakeLists.txt
@@ -1,6 +1,7 @@
 if (WIN32)
     add_definitions(-DSUDOU_PLATFORM_WINDOWS -DSUDOU_BUILD_DLL)
 endif(WIN32)
-add_library(Sudou SHARED
+
+add_library(Engine SHARED
 Application.cpp
 )
