--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Engine/Source/ThirdParty/spdlog"]
 	path = Engine/Source/ThirdParty/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule ".\\Engine\\Source\\ThirdParty\\GLFW"]
+	path = .\\Engine\\Source\\ThirdParty\\GLFW
+	url = https://github.com/glfw/glfw.git
