--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "imgui"]
 	path = .\\Engine\\Source\\ThirdParty\\imgui
-	url = https://github.com/ocornut/imgui.git
+	url = https://github.com/douysu/imgui.git
