--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "imgui"]
 	path = .\\Engine\\Source\\ThirdParty\\imgui
 	url = https://github.com/douysu/imgui.git
+[submodule ".\\Engine\\Source\\ThirdParty\\spdlog"]
+	path = .\\Engine\\Source\\ThirdParty\\spdlog
+	url = https://github.com/douysu/spdlog.git
