--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,13 @@ set(LIBRARY_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/Engine/Binaries/${CMAKE_VS_PLATFORM
 link_directories(${CMAKE_SOURCE_DIR}/Engine/Libs)
 
 set(SRC_ROOT_PATH "${CMAKE_SOURCE_DIR}/Engine/Source")
+set(THIRD_PARTY "${SRC_ROOT_PATH}/ThirdParty")
 
 # Include
-include_directories(
-    "${SRC_ROOT_PATH}"
-    "${SRC_ROOT_PATH}/ThirdParty"
-)
+include_directories("${SRC_ROOT_PATH}")
+include_directories("${THIRD_PARTY}")
+include_directories("${THIRD_PARTY}/spdlog/include")
+include_directories("${THIRD_PARTY}/glad/include")
 
 # File
 file(
@@ -30,37 +31,7 @@ file(GLOB SOURCE_EDITOR
     "${SRC_ROOT_PATH}/Editor/*.h"
 )
 
-# Platform
-if (WIN32)
-    # Add lib
-    set(LIBS glfw3 opengl32)
-    # Glad
-    add_library(GLAD 
-    "${SRC_ROOT_PATH}/ThirdParty/glad/glad.c"
-    )
-    set(LIBS ${LIBS} GLAD)
-    # Imgui
-    include_directories("${SRC_ROOT_PATH}/ThirdParty/imgui")
-    file(GLOB SOURCE_IMGUI
-    "${SRC_ROOT_PATH}/ThirdParty/imgui/*.cpp"
-    "${SRC_ROOT_PATH}/ThirdParty/imgui/*.h"
-    )
-    add_library(ImGui ${SOURCE_IMGUI})
-    set(LIBS ${LIBS} ImGui)
-    # Glm
-    set(BUILD_STATIC_LIBS 1)
-    add_subdirectory("${SRC_ROOT_PATH}/ThirdParty/glm")
-    set(LIBS ${LIBS} glm::glm_static)
-    # Add macro
-    add_definitions(-DSUDOU_PLATFORM_WINDOWS -DGLFW_INCLUDE_NONE)
-    # Create filters
-    include(${CMAKE_SOURCE_DIR}/Cmake/Windows.cmake)
-    assign_source_group(${SOURCE_LIST})
-elseif (UNIX AND NOT APPLE)
-    message(STATUS "Is Unix")
-elseif (APPLE)
-    message(STATUS "Is Apple")
-endif (WIN32)
+include(${CMAKE_SOURCE_DIR}/Cmake/ThirdParty.cmake)
 
 # Generate Engine
 add_library(Engine ${SOURCE_LIST})
