feat: 修改glfw库位置

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set (CMAKE_CXX_STANDARD 17)
 project (Sudou)
 
 set(EXECUTABLE_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/Engine/Binaries/${CMAKE_VS_PLATFORM_NAME})
-set(LIBRARY_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/Engine/Binaries/${CMAKE_VS_PLATFORM_NAME})
+set(LIBRARY_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/Engine/Libs/${CMAKE_VS_PLATFORM_NAME})
 
 set(SRC_ROOT_PATH "${CMAKE_SOURCE_DIR}/Engine/Source")
 set(THIRD_PARTY "${SRC_ROOT_PATH}/ThirdParty")
