--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "imgui"]
-	path = .\\Engine\\Source\\ThirdParty\\imgui
+[submodule "Engine/Source/ThirdParty/imgui"]
+	path = Engine/Source/ThirdParty/imgui
 	url = https://github.com/douysu/imgui.git
-[submodule ".\\Engine\\Source\\ThirdParty\\spdlog"]
-	path = .\\Engine\\Source\\ThirdParty\\spdlog
+[submodule "Engine/Source/ThirdParty/spdlog"]
+	path = Engine/Source/ThirdParty/spdlog
 	url = https://github.com/douysu/spdlog.git
-[submodule ".\\Engine\\Source\\ThirdParty\\glm"]
-	path = .\\Engine\\Source\\ThirdParty\\glm
+[submodule "Engine/Source/ThirdParty/glm"]
+	path = Engine/Source/ThirdParty/glm
 	url = https://github.com/g-truc/glm
